Reduce font size in asides, set to full-width on mobile Fixes #96

--- a/simple.css
+++ b/simple.css
@@ -297,10 +297,20 @@ aside, details, pre, progress {
 }
 
 aside {
+  font-size: 1rem;
   width: 30%;
   padding: 0 15px;
   margin-left: 15px;
   float: right;
+}
+
+/* Make aside full-width on mobile */
+@media only screen and (max-width: 720px) {
+  aside {
+    width: 100%;
+    float: none;
+    margin-left: 0;
+  }
 }
 
 article, fieldset {
